; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_pass2.c_doForest.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_pass2.c_doForest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { %struct.TYPE_12__ }
%struct.TYPE_12__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_14__ = type { %struct.TYPE_14__* }
%struct.TYPE_15__ = type { %struct.TYPE_10__ }
%struct.TYPE_10__ = type { %struct.TYPE_14__* }

@Gen = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_13__*)* @doForest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @doForest(%struct.TYPE_13__* %0) #0 {
  %2 = alloca %struct.TYPE_13__*, align 8
  %3 = alloca %struct.TYPE_14__**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %2, align 8
  %6 = load i32, i32* @Gen, align 4
  %7 = call %struct.TYPE_15__* @code(i32 %6)
  %8 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %8, i32 0, i32 0
  store %struct.TYPE_14__** %9, %struct.TYPE_14__*** %3, align 8
  %10 = load %struct.TYPE_13__*, %struct.TYPE_13__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @Seq_length(i32 %14)
  store i32 %15, i32* %5, align 4
  store i32 0, i32* %4, align 4
  br label %16

16:                                               ; preds = %35, %1
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* %5, align 4
  %19 = icmp slt i32 %17, %18
  br i1 %19, label %20, label %38

20:                                               ; preds = %16
  %21 = load %struct.TYPE_13__*, %struct.TYPE_13__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @Seq_remlo(i32 %25)
  %27 = call %struct.TYPE_14__* @visit(i32 %26)
  %28 = load %struct.TYPE_14__**, %struct.TYPE_14__*** %3, align 8
  store %struct.TYPE_14__* %27, %struct.TYPE_14__** %28, align 8
  %29 = load %struct.TYPE_14__**, %struct.TYPE_14__*** %3, align 8
  %30 = load %struct.TYPE_14__*, %struct.TYPE_14__** %29, align 8
  %31 = call i32 @assert(%struct.TYPE_14__* %30)
  %32 = load %struct.TYPE_14__**, %struct.TYPE_14__*** %3, align 8
  %33 = load %struct.TYPE_14__*, %struct.TYPE_14__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %33, i32 0, i32 0
  store %struct.TYPE_14__** %34, %struct.TYPE_14__*** %3, align 8
  br label %35

35:                                               ; preds = %20
  %36 = load i32, i32* %4, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %4, align 4
  br label %16

38:                                               ; preds = %16
  %39 = load %struct.TYPE_14__**, %struct.TYPE_14__*** %3, align 8
  store %struct.TYPE_14__* null, %struct.TYPE_14__** %39, align 8
  %40 = load %struct.TYPE_13__*, %struct.TYPE_13__** %2, align 8
  %41 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %42, i32 0, i32 0
  %44 = call i32 @Seq_free(i32* %43)
  ret void
}

declare dso_local %struct.TYPE_15__* @code(i32) #1

declare dso_local i32 @Seq_length(i32) #1

declare dso_local %struct.TYPE_14__* @visit(i32) #1

declare dso_local i32 @Seq_remlo(i32) #1

declare dso_local i32 @assert(%struct.TYPE_14__*) #1

declare dso_local i32 @Seq_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
